fixed margin error+font size
Fixed some margin error with the container as the text would not align properly. Changed font size appropriately and even experimented with swapping the colours out

--- a/assets/styles/grid.css
+++ b/assets/styles/grid.css
@@ -5,9 +5,10 @@
 }
 
 .container{
-    margin: auto;
+    margin: auto ;
+    margin-right: 0;
     max-width: 1140px;
-    padding: 1rem 1rem;
+    padding: 2rem 2rem;
     /* rem = font size of root element*/
 }
 
